# CG-Lab

./: .gitignore  CMakeLists.txt  Readme.md
src/: class1.hpp  class2.hpp  class3.hpp  helper.h  main.cpp
